--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Custom Styling */
 body {
-  @apply bg-gray-50 text-gray-900;
-}
-
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-.no-scrollbar {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+  font-family: 'Segoe UI', sans-serif;
 }
